--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -72,18 +72,24 @@ jobs:
       - name: Run load tests and generate HTML report
         run: locust --config=${{ github.event.inputs.SCENARIO }} --html=./reports/${{ github.run_id }}/index.html
 
-      # 9. Деплой HTML-отчёта в GitHub Pages, чтобы можно было посмотреть результаты в браузере
-      - name: Deploy HTML report to GitHub Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Авторизация для push в gh-pages
-          keep_files: true  # Сохраняем предыдущие отчёты
-          publish_dir: reports  # Публикуем директорию reports
-          publish_branch: gh-pages  # На ветке gh-pages
-
-      # 10. Корректно останавливаем docker-контейнеры и удаляем volume-ы (например, temp-файлы)
+      # 9. Корректно останавливаем docker-контейнеры и удаляем volume-ы (например, temp-файлы)
       - name: Stop test services
         if: always()
         run: docker compose -f docker-compose.ci.yaml down -v
         working-directory: performance-qa-engineer-course
+
+
+    publish-report:
+      runs-on: ubuntu-latest  # Используется стандартный GitHub Actions runner
+      timeout-minutes: 30  # Ограничение по времени выполнения — 30 минут
+
+      steps:
+        # 1. Деплой HTML-отчёта в GitHub Pages, чтобы можно было посмотреть результаты в браузере
+        - name: Deploy HTML report to GitHub Pages
+          if: always()
+          uses: peaceiris/actions-gh-pages@v4
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}  # Авторизация для push в gh-pages
+            keep_files: true  # Сохраняем предыдущие отчёты
+            publish_dir: reports  # Публикуем директорию reports
+            publish_branch: gh-pages  # На ветке gh-pages
