--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -1,10 +1,10 @@
-name: Performance Tests  # Название workflow — отображается в UI GitHub Actions
+name: Performance Tests
 
 on:
-  workflow_dispatch: # Позволяет запускать workflow вручную через UI GitHub
+  workflow_dispatch:
     inputs:
       SCENARIO:
-        type: 'choice'  # Пользователь должен выбрать один из заранее заданных конфигов
+        type: 'choice'
         default: './scenarios/grpc/gateway/new_user_get_accounts/v1.0.conf'
         options:
           # grpc-сценарии
@@ -26,12 +26,12 @@ on:
           - ./scenarios/http/gateway/new_user_issue_physical_card/v1.0.conf
           - ./scenarios/http/gateway/new_user_make_top_up_operation/v1.0.conf
         required: true
-        description: 'Locust config file'  # Комментарий, отображаемый в UI при запуске
+        description: 'Locust config file'
 
 jobs:
   run-tests:
-    runs-on: ubuntu-latest  # Используется стандартный GitHub Actions runner
-    timeout-minutes: 30  # Ограничение по времени выполнения — 30 минут
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
       # 1. Клонируем репозиторий, в котором находится YAML-файл
@@ -42,7 +42,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'  # Версия Python, соответствующая проекту
+          python-version: '3.12'
 
       # 3. Клонируем репозиторий с урезанным docker-compose стендом и Dockerfile-ами
       - name: Clone test services
@@ -78,20 +78,38 @@ jobs:
         run: docker compose -f docker-compose.ci.yaml down -v
         working-directory: performance-qa-engineer-course
 
+      # 10. Загружаем отчёт как артефакт
+      - name: Upload HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: performance-report-${{ github.run_id }}
+          path: reports/${{ github.run_id }}/
+          retention-days: 30
 
   publish-report:
-    runs-on: ubuntu-latest  # Используется стандартный GitHub Actions runner
-    timeout-minutes: 30  # Ограничение по времени выполнения — 30 минут
-    needs: run-tests # чтобы выполнялась после задачи run-tests
-    if: always() # чтобы выполнялась даже в случае падения run-tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs: run-tests
+    if: always()
 
     steps:
-      # 1. Деплой HTML-отчёта в GitHub Pages, чтобы можно было посмотреть результаты в браузере
-      - name: Deploy HTML report to GitHub Pages
+      # 1: Скачиваем артефакт с отчётом
+      - name: Download HTML report
+        uses: actions/download-artifact@v4
+        with:
+          name: performance-report-${{ github.run_id }}
+          path: reports/
 
+      # 2: Проверяем что отчёт скачался
+      - name: List downloaded files
+        run: find reports/ -type f
+
+      # 3. Деплой HTML-отчёта в GitHub Pages, чтобы можно было посмотреть результаты в браузере
+      - name: Deploy HTML report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Авторизация для push в gh-pages
-          keep_files: true  # Сохраняем предыдущие отчёты
-          publish_dir: reports  # Публикуем директорию reports
-          publish_branch: gh-pages  # На ветке gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          keep_files: true
+          publish_dir: reports
+          publish_branch: gh-pages
