--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -99,7 +99,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: performance-report-${{ github.run_id }}
-          path: /reports/
+          path: reports/
 
       # 2: Проверяем что отчёт скачался
       - name: List downloaded files
@@ -111,5 +111,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           keep_files: true
-          publish_dir: /reports/
+          publish_dir: reports/
           publish_branch: gh-pages
