--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -34,82 +34,70 @@ jobs:
     timeout-minutes: 30
 
     steps:
-      # 1. Клонируем репозиторий, в котором находится YAML-файл
       - name: Check out repository
         uses: actions/checkout@v4
 
-      # 2. Устанавливаем Python (используется в Locust)
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      # 3. Клонируем репозиторий с урезанным docker-compose стендом и Dockerfile-ами
       - name: Clone test services
         run: git clone https://github.com/Nikita-Filonov/performance-qa-engineer-course.git
 
-      # 4. Сборка базового образа, на котором основаны gateway и mock-сервисы
       - name: Build base Docker image
         run: docker build -f Dockerfile.base -t base-service .
         working-directory: performance-qa-engineer-course
 
-      # 5. Запускаем только необходимые сервисы для тестов: grpc-gateway, http-gateway, grpc-mock, http-mock
       - name: Start test services
         run: docker compose -f docker-compose.ci.yaml up -d --build
         working-directory: performance-qa-engineer-course
 
-      # 6. Устанавливаем зависимости, включая Locust и все библиотеки, нужные для запуска сценария
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 7. Создаём папку, куда будет сохранён HTML-отчёт по результатам теста
       - name: Create report directory
         run: mkdir -p ./reports/${{ github.run_id }}
 
-      # 8. Запускаем Locust с выбранным конфигурационным файлом и сохраняем HTML-отчёт
       - name: Run load tests and generate HTML report
         run: locust --config=${{ github.event.inputs.SCENARIO }} --html=./reports/${{ github.run_id }}/index.html
 
-      # 9. Корректно останавливаем docker-контейнеры и удаляем volume-ы (например, temp-файлы)
       - name: Stop test services
         if: always()
         run: docker compose -f docker-compose.ci.yaml down -v
         working-directory: performance-qa-engineer-course
 
-      # 10. Загружаем отчёт как артефакт
-      - name: Upload HTML report
+      - name: Upload Locust reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: performance-report-${{ github.run_id }}
-          path: reports/${{ github.run_id }}/
-          retention-days: 30
+          name: reports
+          path: reports
 
   publish-report:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    needs: run-tests
     if: always()
+    needs: [ run-tests ]
+    runs-on: ubuntu-latest
 
     steps:
-      # 1: Скачиваем артефакт с отчётом
-      - name: Download HTML report
+      - name: Check out repository
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Download Locust reports
         uses: actions/download-artifact@v4
         with:
-          name: performance-report-${{ github.run_id }}
-          path: reports/
+          name: reports
+          path: reports
 
-      # 2: Проверяем что отчёт скачался
-      - name: List downloaded files
-        run: find reports/ -type f
-
-      # 3. Деплой HTML-отчёта в GitHub Pages, чтобы можно было посмотреть результаты в браузере
       - name: Deploy HTML report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           keep_files: true
-          publish_dir: ./reports
+          publish_dir: reports
           publish_branch: gh-pages
